# crewai_city_funfact

./: fun_fact.md  pyproject.toml
src/project1/: main.py  main1.py
