[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Talha Iftikhar", email = "talhaiftikhar13209@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.105.0",
    "litellm>=1.60.2",
]

[project.scripts]
project1 = "project1.main:kickoff"

city = "project1.main1:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
